[package]
name = "smelter-webapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
smelter-ui = { version = "0.1.0", path = "../smelter-ui" }
smelter-reflux = { version = "0.1.0", path = "../smelter-reflux" }
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
]
